# custom-tools

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  ISSUE-TUI-RUNTIME-ERRORS.md  QUICK_REFERENCE.md  README.md  README_RUST_UI.md  SCRIPT_INDEX.md  SECURITY.md  TUI_FIXES_SUMMARY.md  backup-config.json  backup-lib.sh  backup-noninteractive.sh  backup-profile-enhanced.sh  backup-profile-secure.sh  build.rs  install-backup-ui.sh  install.sh  rust_rustup_uninstall  test-comprehensive.sh  test-enhanced.sh  test-secure.sh  test-tui.sh
docs/specs/backup-restore-ui/: design.md  tasks.md
documentation/: AUTO_COMPACTION_AND_SYNC_SUMMARY.md  CLAUDE_EXIT_COMMAND.md  EXIT_ROUTINE_IMPLEMENTATION.md  FABRIC_SETUP.md  OBSIDIAN_MCP_SETUP.md  OBSIDIAN_README_UPDATE_SUMMARY.md  OBSIDIAN_SYNC_WORKFLOW.md  OPTIMIZATION_PROPOSAL.md
issues/: tui-critical-issues.md
scripts/claude/: claude_exit_routine.sh  claude_optimizer.py  claude_optimizer_secure.py  setup_superclaude.sh  test-context7.sh  update_claude_dir.sh
scripts/cleanup/: analyze_cleanup.py  final_cleanup_report.py
scripts/migration/: reorganize_tools.sh  update_paths.sh  update_paths_improved.sh  verify_migration.sh
scripts/network/: check-network-status.sh  optimize-network.sh  setup-firewall.sh  setup-mosh-access.sh
scripts/obsidian/: sync_docs_to_obsidian.sh
scripts/system/: install-services.sh
src/: disaster_recovery.rs  main.rs
src/backend/: mod.rs
src/core/: app.rs  config.rs  mod.rs  security.rs  state.rs  types.rs
src/ui/: components.rs  mod.rs  terminal.rs  widgets.rs
(+14 files in other folders)
