[package]
name = "backup-ui"
version = "0.1.0"
edition = "2021"
authors = ["Backup UI"]
description = "Terminal UI for backup/restore system"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
zeroize = "1.7"
sha2 = "0.10"
rand = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rpassword = "3.0"
